<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="shortcutDisabledMessage">long test</string>
    <string name="shortcutShortLabel">Settings</string>
    <string name="shortcutLongLabel">Shortcut1isdisabled</string>

    <string name="shortcutDisabledMessage_2">long test</string>
    <string name="shortcutShortLabel_2">Home</string>
    <string name="shortcutLongLabel_2">Shortcut1isdisabled</string>


</resources>